--- a/src/main/resources/public/stylesheets/partSubmit.css
+++ b/src/main/resources/public/stylesheets/partSubmit.css
@@ -13,6 +13,11 @@ h1 {
 
 h2 {
 	font-family: "Quicksand", sans-serif;
+	background-color: white;
+	border: 1px solid black;
+	display: block;
+	margin: auto;
+	width: 50%;
 	text-align: center;
 	font-size: 20px;
 }
