--- a/src/main/resources/templates/fragments/NavBar.html
+++ b/src/main/resources/templates/fragments/NavBar.html
@@ -10,9 +10,9 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg bg-light">
+	  <nav class="navbar navbar-expand-lg" style="background-image:url(/stylesheets/images/metalBackgroundPublicDomain.png);"> <!-- bg-light" -->
       <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/}">Database</a>
+        <a class="navbar-brand" style="background-color:#d4d6df; border:1px sold black;" th:href="@{/}">Database</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
