--- a/src/main/resources/public/stylesheets/home.css
+++ b/src/main/resources/public/stylesheets/home.css
@@ -1,3 +1,7 @@
+body {
+	background-image: url("images/homeBG.png");	
+}
+
 h1 {
 	background-color: #d4d6df;
 	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
