--- a/src/main/resources/templates/partView.html
+++ b/src/main/resources/templates/partView.html
@@ -47,11 +47,11 @@
         <th class="header-name">|Part Description</th>
         
         <tr th:each="n:${Parts}">
-          <td th:text="${n.PartId}"></td>
+          <td th:text="${n.PartID}"></td>
           <td th:text="${n.PartName}"></td>
           <td th:text="${n.PartDescription}"></td>
           <td>
-            <form th:action="@{/PartEdit/{PartId}(PartId=${n.PartId})}">
+            <form th:action="@{/PartEdit/{PartID}(PartID=${n.PartID})}">
               <button style="border: none; background:transparent;" type="submit" value="Edit"><i style="color:#00196A" class="fa fa-cog fa-lg"></i></button>
             </form>
           </td>
