--- a/src/main/resources/templates/customerView.html
+++ b/src/main/resources/templates/customerView.html
@@ -41,14 +41,15 @@
     <h1 style="font-weight: bolder;">View Customers</h1><br>
 
     <p1>
-    <table id="WorkOrderViewTable"class="styled-table">
+    <br>
+    <table id="WorkOrderViewTable"class="styled-table" >
       <tr class="table-header" style="color: rgb(0, 0, 0);">
         <th class="header-name">Customer #</th>
-        <th class="header-name" >|Customer Name </th>
-        <th class="header-name">|Email</th>
-        <th class="header-name">|Phone Number</th>
-        <th class="header-name">|Address</th>
-        <th class="header-name">|Postal Code</th>
+        <th class="header-name" >Customer Name </th>
+        <th class="header-name">Email</th>
+        <th class="header-name">Phone Number</th>
+        <th class="header-name">Address</th>
+        <th class="header-name">Postal Code</th>
         
         <tr th:each="n:${Customers}">
           <td th:text="${n.CustIdentifier}"></td>
@@ -65,6 +66,7 @@
         </tr>
         
     </table>
+    <br>
     </p1>
   </div>
   <script type="text/javascript"></script>
