--- a/src/main/resources/templates/staffView.html
+++ b/src/main/resources/templates/staffView.html
@@ -40,12 +40,14 @@
   <div class="db-container">
     <h1 style="font-weight: bolder;">View Staff Members</h1><br>
 
+    <p1>
+    <br>
     <table id="VendorsViewTable"class="styled-table">
       <tr class="table-header" style="color: rgb(0, 0, 0);">
-        <th class="header-name"> Staff ID |</th>
-        <th class="header-name"> Name | </th>
-        <th class="header-name"> Phone Number | </th>
-        <th class="header-name"> Role </th>
+        <th class="header-name"> Staff ID</th>
+        <th class="header-name"> Name</th>
+        <th class="header-name"> Phone Number</th>
+        <th class="header-name"> Role</th>
         
         <tr th:each="n:${Staff}">
           <td th:text="${n.StaffId}"></td>
@@ -61,6 +63,8 @@
         </tr>
         
     </table>
+  <br>
+    </p1>
   </div>
   <script type="text/javascript"></script>
 </body>
