more formatting work; some cleanup left to finish.

--- a/src/main/resources/public/stylesheets/vendorView.css
+++ b/src/main/resources/public/stylesheets/vendorView.css
@@ -1,6 +1,6 @@
 /* Basic CSS For the Staff Information Display Page */
 body {
-	background-image: url("images/staffBG.png");
+	background-image: url("images/vendorBG.png");
 }
 
 h1 {
