--- a/src/main/resources/templates/usageReportView.html
+++ b/src/main/resources/templates/usageReportView.html
@@ -40,10 +40,12 @@
   <div class="db-container">
     <h1 style="font-weight: bolder;">View Usage Reports</h1><br>
 
+    <p1>
+    <br>
     <table id="VendorsViewTable"class="styled-table">
       <tr class="table-header" style="color: rgb(0, 0, 0);">
-        <th class="header-name"> Tool ID |</th>
-        <th class="header-name" > Repair ID | </th>
+        <th class="header-name"> Tool ID </th>
+        <th class="header-name" > Repair ID  </th>
         <th class="header-name" > Message </th>
         
         <tr th:each="n:${UsageReports}">
@@ -60,6 +62,8 @@
         
     </table>
   </div>
+  <br>
+  <p1>
   <script type="text/javascript"></script>
 </body>
 </html>
