--- a/src/main/resources/public/stylesheets/partView.css
+++ b/src/main/resources/public/stylesheets/partView.css
@@ -1,6 +1,6 @@
 /* Basic CSS For the Staff Information Display Page */
 body {
-	background-image: url("images/staffBG.png");
+	background-image: url("images/itemBG.png");
 }
 
 h1 {
@@ -26,7 +26,7 @@ h2 {
 }
 
 p1 {
-	background-color: #bcd6bc;
+	background-color: #b71b1b;
 	font-family: "Quicksand", sans-serif; color: black;
 	text-align: center;
 	border: 1px solid black;
