--- a/src/main/resources/templates/certificationView.html
+++ b/src/main/resources/templates/certificationView.html
@@ -43,12 +43,13 @@
     <h1 style="font-weight: bolder;">Certifications</h1><br>
 
     <p1>
+    <br>
     <table id="WorkOrderViewTable"class="styled-table">
       <tr class="table-header" style="color: rgb(0, 0, 0);">
-        <th class="header-name"> Certification Number | </th>
-        <th class="header-name" > Certification Name | </th>
-        <th class="header-name" > Date Obtained | </th>
-        <th class="header-name" > Expiry Date | </th>
+        <th class="header-name"> Certification Number  </th>
+        <th class="header-name" > Certification Name  </th>
+        <th class="header-name" > Date Obtained  </th>
+        <th class="header-name" > Expiry Date  </th>
         <th class="header-name" > Technician ID </th>
         
          <tr th:each="n:${Certifications}">
@@ -66,6 +67,7 @@
         </tr>
         
     </table>
+    <br>
     </p1>
   </div>
   <script type="text/javascript"></script>
