further formatting cleanup

--- a/src/main/resources/templates/toolView.html
+++ b/src/main/resources/templates/toolView.html
@@ -38,13 +38,13 @@
 
 <body style="font-family: Quicksand, sans-serif;">
   <div class="db-container">
-    <h1 style="font-weight: bolder;">Work Orders</h1><br>
+    <h1 style="font-weight: bolder;">Tools</h1><br>
 
     <p1>
     <br>
     <table id="WorkOrderViewTable"class="styled-table">
       <tr class="table-header" style="color: rgb(0, 0, 0);">
-        <th class="header-name"> Tool ID | </th>
+        <th class="header-name"> Tool ID  </th>
         <th class="header-name" > Tool Name </th>
         
         <tr th:each="n:${Tools}">
