--- a/src/main/resources/templates/warrantyDivisionView.html
+++ b/src/main/resources/templates/warrantyDivisionView.html
@@ -37,14 +37,13 @@
 </head>
 
 <body style="font-family: Quicksand, sans-serif;">
+   <h1 style="font-weight: bolder;">View Warranty Divisions</h1><br>
   <p1>
   <br>
   <div class="db-container">
-    <h1 style="font-weight: bolder;">View Warranty Divisions</h1><br>
-
     <table id="WarrantyDivisionViewTable"class="styled-table">
       <tr class="table-header" style="color: rgb(0, 0, 0);">
-        <th class="header-name"> Brand |</th>
+        <th class="header-name"> Brand </th>
         <th class="header-name" > Contact Information </th>
         
         <tr th:each="n:${WarrantyDivisions}">
