--- a/src/main/resources/templates/workOrderSubmit.html
+++ b/src/main/resources/templates/workOrderSubmit.html
@@ -32,7 +32,11 @@
       <br><a th:href="@{/customerSubmit}">(Add New Customer)</a>
       </div>
       <div class="form-name">Description of Fault:<br> <input style="font-family: Quicksand, sans-serif;" type="text" id="CustName" th:field="*{Description}" placeholder="Short Description of Fault" required /></div>
-      <div class="form-name">ClaimID:<br> <input style="font-family: Quicksand, sans-serif;" type="text" id="ClaimID" th:field="*{ClaimID}" placeholder="Warranty Claim ID" required /></div>
+      <div class="form-name">ClaimID:<br>
+      <select th:field="*{ClaimID}" required>
+        <option th:each="claim : ${WarrantyClaims}" th:value="${claim.WarrantyID}" th:text="${claim.WarrantyID}"></option>
+      </select>
+      <br><a th:href="@{/warrantyClaimSubmit}">(Add New WarrantyClaim)</a> 
       <input style="font-family: Quicksand, sans-serif;" type="submit" value="Submit Data" />
       <input style="font-family: Quicksand, sans-serif;" class="reset" type="button" onclick="resetform()" value="Reset">
     </form>
