--- a/src/main/resources/templates/workOrderEdit.html
+++ b/src/main/resources/templates/workOrderEdit.html
@@ -48,22 +48,35 @@
   </table>
   <button th:onclick="|window.location.href='/workReportSubmit/${WorkOrder.OrderNum}'|" class="SubmitButton">Submit a Work Report</button>
 
-  <h2>Usage Reports:</h2>
+  <h2>Part Usage Reports:</h2>
   <table id="WorkOrderViewTable"class="styled-table">
   <tr>
     <th>Date</th>
     <th>|Part ID</th>
+    <th>|Message</th>
+  </tr>
+  <tr th:each="n:${PartUsageReports}">
+    <td th:text="${n.Date}"></td>
+    <td th:text="${n.PartID}"></td>
+    <td th:text="${n.Message}"></td>
+  </tr>
+  </table>
+  <button th:onclick="|window.location.href='/partusageReportSubmit'|" class="SubmitButton">Submit a Part Usage Report</button>
+
+  <h2>Tool Usage Reports:</h2>
+  <table id="WorkOrderViewTable"class="styled-table">
+  <tr>
+    <th>Date</th>
     <th>|Tool ID</th>
     <th>|Message</th>
   </tr>
-  <tr th:each="n:${UsageReports}">
+  <tr th:each="n:${ToolUsageReports}">
     <td th:text="${n.Date}"></td>
-    <td th:text="${n.PartID}"></td>
     <td th:text="${n.ToolID}"></td>
     <td th:text="${n.Message}"></td>
   </tr>
   </table>
-  <button th:onclick="|window.location.href='/usageReportSubmit'|" class="SubmitButton">Submit a Usage Report</button>
+  <button th:onclick="|window.location.href='/toolusageReportSubmit'|" class="SubmitButton">Submit a Tool Usage Report</button>
   </main>
   <script type="text/javascript"></script>
 </body>
