--- a/src/main/resources/templates/toolusageReportSubmit.html
+++ b/src/main/resources/templates/toolusageReportSubmit.html
@@ -25,13 +25,13 @@
   <br>
   <h2>Enter the details for the new Usage Report</h2>
   <div class="form-data">
-    <form action="#" method="post" th:action="@{/usageReportSubmitForm}" th:object="${UsageReport}">
+    <form action="#" method="post" th:action="@{/toolusageReportSubmitForm}" th:object="${ToolUsageReport}">
 	    <div class="form-name" style="font-weight: bolder;">Choose a Tool to use: 
         <select th:field="*{ToolID}">
           <option th:each="tool : ${Tools}" th:value="${tool.ToolID}" th:text="${tool.ToolName}"></option>
         </select>
       </div>
-      <button th:onclick="|window.location.href='/partSubmit'|" class="SubmitButton">Submit a Tool</button>
+      <button th:onclick="|window.location.href='/toolSubmit'|" class="SubmitButton">Submit a Tool</button>
       <div class="form-name" style="font-weight: bolder;">Choose an Active Repair for this report: 
       <select th:field="*{RepairID}">
         <option th:each="order : ${openWorkOrders}" th:value="${order.OrderNum}" th:text="${order.Description}"></option>
