made a bunch work, and made our sql queries actually complex, one of them requires more thought tho

--- a/src/main/resources/templates/fragments/NavBar.html
+++ b/src/main/resources/templates/fragments/NavBar.html
@@ -51,7 +51,8 @@
                 <li><a class="dropdown-item" th:href="@{/partView}">Parts</a></li>
                 <li><a class="dropdown-item" th:href="@{/toolSubmit}">Submit a Tool</a></li>
                 <li><a class="dropdown-item" th:href="@{/toolView}">Tools</a></li>
-                <li><a class="dropdown-item" th:href="@{/usageReportSubmit}">Submit a Usage Report</a></li>
+                <li><a class="dropdown-item" th:href="@{/toolusageReportSubmit}">Submit a Tool Usage Report</a></li>
+                <li><a class="dropdown-item" th:href="@{/partusageReportSubmit}">Submit a Part Usage Report</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
