--- a/src/main/resources/templates/WarrantyClaimSubmit.html
+++ b/src/main/resources/templates/WarrantyClaimSubmit.html
@@ -23,7 +23,7 @@
   <h2>Enter the details for the new Warranty Claim</h2>
   <div class="form-data">
     <form action="#" method="post" th:action="@{/warrantyClaimSubmitForm}" th:object="${WarrantyClaim}">
-	    <div class="form-name">Id:<br> <input style="font-family: Quicksand, sans-serif;" type="number" id="WarrantyID" th:field="*{WarrantyID}" placeholder="Id of the Warranty" required /></div> 
+	    <div class="form-name">Id:<br> <input style="font-family: Quicksand, sans-serif;" type="text" id="WarrantyID" th:field="*{WarrantyID}" placeholder="Id of the Warranty" required /></div> 
 	    <div class="form-name">Brand:<br> <input style="font-family: Quicksand, sans-serif;" type="text" id="Brand" th:field="*{Brand}" placeholder="Brand of the Warranty" required /></div> 
       <input style="font-family: Quicksand, sans-serif;" type="submit" value="Submit Data" />
       <input style="font-family: Quicksand, sans-serif;" class="reset" type="button" onclick="resetform()" value="Reset">
