--- a/src/main/resources/templates/workOrderView.html
+++ b/src/main/resources/templates/workOrderView.html
@@ -47,47 +47,48 @@
     <table id="WorkOrderViewTable"class="styled-table">
       <tr class="table-header">
         <th class="header-name">Order Number </th>
-        <th class="header-name" >Customer Number </th>
+        <th class="header-name" >Customer Name</th>
         <th class="header-name">Start Date </th>
         <th class="header-name">End Date </th>
         <th class="header-name">Description </th>
         <th class="header-name">Claim ID</th>
+        <th class="header-name">Edit</th>
       </tr>
       <tr th:each="n:${openWorkOrders}" th:id="open">
-        <td th:text="${n.OrderNum}"></td>
-        <td th:text="${n.CustomerNum}"></td>
-        <td th:text="${n.StartDate}"></td>
-        <td th:text="${n.EndDate}"></td>
-        <td th:text="${n.Description}"></td>
-        <td th:text="${n.ClaimID}"></td>
+          <td th:text="${n.FirstString}"></td>
+          <td th:text="${n.SecondString}"></td>
+          <td th:text="${n.ThirdString}"></td>
+          <td th:text="${n.FourthString}"></td>
+          <td th:text="${n.FifthString}"></td>
+          <td th:text="${n.SixthString}"></td>
         <td>
-          <form th:action="@{/WorkOrderEdit/{OrderNum}(OrderNum=${n.OrderNum})}">
+          <form th:action="@{/WorkOrderEdit/{OrderNum}(OrderNum=${n.FirstString})}">
             <button style="border: none; background:transparent;" type="submit" value="Edit"><i style="color:#00196A" class="fa fa-cog fa-lg"></i></button>
           </form>
         </td>
       </tr>
         <tr th:each="a:${closedWorkOrders}" th:id="closed">
-          <td th:text="${a.OrderNum}"></td>
-          <td th:text="${a.CustomerNum}"></td>
-          <td th:text="${a.StartDate}"></td>
-          <td th:text="${a.EndDate}"></td>
-          <td th:text="${a.Description}"></td>
-          <td th:text="${a.ClaimID}"></td>
+          <td th:text="${a.FirstString}"></td>
+          <td th:text="${a.SecondString}"></td>
+          <td th:text="${a.ThirdString}"></td>
+          <td th:text="${a.FourthString}"></td>
+          <td th:text="${a.FifthString}"></td>
+          <td th:text="${a.SixthString}"></td>
           <td>
-            <form th:action="@{/WorkOrderEdit/{OrderNum1}(OrderNum1=${a.OrderNum})}">
+            <form th:action="@{/WorkOrderEdit/{OrderNum1}(OrderNum1=${a.FirstString})}">
               <button style="border: none; background:transparent;" type="submit" value="Edit"><i style="color:#00196A" class="fa fa-cog fa-lg"></i></button>
             </form>
           </td>
         </tr>
         <tr th:each="b:${newWorkOrders}" th:id="new" hidden>
-          <td th:text="${b.OrderNum}"></td>
-          <td th:text="${b.CustomerNum}"></td>
-          <td th:text="${b.StartDate}"></td>
-          <td th:text="${b.EndDate}"></td>
-          <td th:text="${b.Description}"></td>
-          <td th:text="${b.ClaimID}"></td>
+          <td th:text="${b.FirstString}"></td>
+          <td th:text="${b.SecondString}"></td>
+          <td th:text="${b.ThirdString}"></td>
+          <td th:text="${b.FourthString}"></td>
+          <td th:text="${b.FifthString}"></td>
+          <td th:text="${b.SixthString}"></td>
           <td>
-            <form th:action="@{/WorkOrderEdit/{OrderNum2}(OrderNum2=${b.OrderNum})}">
+            <form th:action="@{/WorkOrderEdit/{OrderNum2}(OrderNum2=${b.FirstString})}">
               <button style="border: none; background:transparent;" type="submit" value="Edit"><i style="color:#00196A" class="fa fa-cog fa-lg"></i></button>
             </form>
           </td>
